--- a/SYQRCodeDemoSwift/Info.plist
+++ b/SYQRCodeDemoSwift/Info.plist
@@ -54,5 +54,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSCameraUsageDescription</key>
+        <string>请允许此权限使用相机功能</string>
+        <key>NSPhotoLibraryUsageDescription</key>
+        <string>请允许此权限才能访问相册</string>
 </dict>
 </plist>
